--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,5 +1,7 @@
 @import url("./reset.scss");
 @import url("./variables/global.scss");
+@import url("./themes/dark.scss");
+@import url("./themes/normal.scss");
 
 .app {
   display: flex;
