--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,6 +3,11 @@
 @import url("./themes/dark.scss");
 @import url("./themes/normal.scss");
 
+body {
+  font: var(--font-s);
+  color: var(--primary-color);
+}
+
 .app {
   display: flex;
   flex-direction: column;
@@ -10,3 +15,6 @@
   min-height: 100vh;
 }
 
+.icon {
+  color: var(--icon-color);
+}
