--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -8,6 +8,10 @@ body {
   color: var(--primary-color);
 }
 
+p {
+  color: var(--primary-color);
+}
+
 .app {
   display: flex;
   flex-direction: column;
