--- a/src/Components/Header/ui/Header.module.scss
+++ b/src/Components/Header/ui/Header.module.scss
@@ -20,8 +20,12 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  font: var(--font-m);
-  font-weight: 700;
+
+  p {
+    color: var(--primary-color);
+    font: var(--font-m);
+    font-weight: 700;
+  }
 }
 
 .button {
