--- a/src/assets/styles/variables/global.scss
+++ b/src/assets/styles/variables/global.scss
@@ -23,5 +23,6 @@
   --container-main: 1335px;
 
   /*Header*/
-  --content-header: 80px;
+  --content-header-height: 80px;
+  --content-footer-height: 200px;
 }
