--- a/src/Components/Header/ui/Header.module.scss
+++ b/src/Components/Header/ui/Header.module.scss
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: var(--content-header);
+  height: var(--content-header-height);
 }
 
 .logo {
