--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -56,3 +56,10 @@ p {
     transform: rotate(360deg);
   }
 }
+
+// Errors
+.error {
+  text-align: center;
+  color: var(--primary-color);
+  font: var(--font-l);
+}
