--- a/src/Components/BasketItem/ui/BasketItem.module.scss
+++ b/src/Components/BasketItem/ui/BasketItem.module.scss
@@ -54,7 +54,7 @@
     color: var(--icon-color);
     font-family: "Inter";
     font-weight: 600;
-    font-style: 20px;
+    font-size: 20px;
   }
 }
 
