--- a/src/Components/BasketItem/ui/BasketItem.module.scss
+++ b/src/Components/BasketItem/ui/BasketItem.module.scss
@@ -11,6 +11,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  h2 {
+    font: var(--font-l);
+    font-weight: 600;
+    color: var(--primary-color);
+  }
 }
 
 .image {
@@ -73,4 +79,20 @@
     font-family: "Inter";
     font-weight: 600;
   }
+}
+
+.empty {
+  h3 {
+    color: var(--primary-color);
+    text-align: center;
+    font: var(--font-m);
+  }
+}
+.basketIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff !important;
+  width: 100%;
+  // height: 100%;
 }
