--- a/src/Components/Header/ui/Header.module.scss
+++ b/src/Components/Header/ui/Header.module.scss
@@ -47,3 +47,33 @@
   justify-content: center;
   gap: 30px;
 }
+
+.body {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100%;
+  gap: 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  // flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--border-color);
+  padding: 12px 20px;
+
+  button {
+    min-height: 40px;
+    min-width: 150px;
+    color: #fff;
+  }
+}
+
+.totalPrice {
+  font-family: "Inter";
+  font-weight: 600;
+  font: var(--font-m);
+  color: var(--icon-color);
+}
